Fix Ads alignment

--- a/app/styles/layout/_ad.scss
+++ b/app/styles/layout/_ad.scss
@@ -4,20 +4,17 @@
 }
 
 .os-ad-top{
-  text-align: center;
-  position: relative;
-  left: auto;
-  right: auto;
-  margin: 0px -1000px;
+    text-align: center;
+    position: relative;
+    left: auto;
+    right: auto;
+    margin: 0px -300px;
 /*  margin-top: -8px;*/
 /*  margin-bottom: 16px;*/
 }
 .os-ad-bottom{
   text-align: center;
-  position: relative;
-  left: auto;
-  right: auto;
-  margin: 0px -1000px;
+  // padding: 0px 60px;
 }
 
 .os-ad-middle{
